--- a/.gitignore
+++ b/.gitignore
@@ -95,8 +95,9 @@ fabric.properties
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
 
 # Go workspace file
 go.work
 
+bin/*
